--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,6 +24,14 @@
         >Home</a
       >
     </li>
+    <li>
+      <a
+        routerLink="/dashboard"
+        routerLinkActive="active"
+        ariaCurrentWhenActive="page"
+        >Dashboard</a
+      >
+    </li>
   </ul>
 </nav>
 <router-outlet></router-outlet>
