add logout component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,6 +32,14 @@
         >Dashboard</a
       >
     </li>
+    <li>
+      <a
+        routerLink="/logout"
+        routerLinkActive="active"
+        ariaCurrentWhenActive="page"
+        >Log Out</a
+      >
+    </li>
   </ul>
 </nav>
 <router-outlet></router-outlet>
