--- a/src/app/auth/components/register-form/register-form.component.html
+++ b/src/app/auth/components/register-form/register-form.component.html
@@ -16,6 +16,10 @@
       Nickname:
       <input type="text" formControlName="nickname" />
     </label>
+    <label>
+      Phone Number:
+      <input type="text" formControlName="phoneNumber" placeholder="(+995)" />
+    </label>
     <input
       type="submit"
       [disabled]="!signUpForm.valid"
