--- a/src/app/features/components/dashboard/dashboard.component.html
+++ b/src/app/features/components/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
   <input
     type="text"
     [(ngModel)]="searchText"
-    placeholder="Search Crypto Name"
+    placeholder="Search Crypto"
   />
   <table class="crypto-table">
     <thead>
