add user email alert and errors

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,12 +33,7 @@
       >
     </li>
     <li>
-      <a
-        routerLink="/logout"
-        routerLinkActive="active"
-        ariaCurrentWhenActive="page"
-        >Log Out</a
-      >
+      <button (click)="logout()">Log Out</button>
     </li>
   </ul>
 </nav>
