add credit-card component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,6 +33,14 @@
       >
     </li>
     <li>
+      <a
+        routerLink="/creditCard"
+        routerLinkActive="active"
+        ariaCurrentWhenActive="page"
+        >Credit Card</a
+      >
+    </li>
+    <li>
       <button (click)="logout()">Log Out</button>
     </li>
   </ul>
