--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,48 +1,2 @@
-<nav>
-  <ul>
-    <li>
-      <a
-        routerLink="/register"
-        routerLinkActive="active"
-        ariaCurrentWhenActive="page"
-        >Register</a
-      >
-    </li>
-    <li>
-      <a
-        routerLink="/login"
-        routerLinkActive="active"
-        ariaCurrentWhenActive="page"
-        >Login</a
-      >
-    </li>
-    <li>
-      <a
-        routerLink="/home"
-        routerLinkActive="active"
-        ariaCurrentWhenActive="page"
-        >Home</a
-      >
-    </li>
-    <li>
-      <a
-        routerLink="/dashboard"
-        routerLinkActive="active"
-        ariaCurrentWhenActive="page"
-        >Dashboard</a
-      >
-    </li>
-    <li>
-      <a
-        routerLink="/creditCard"
-        routerLinkActive="active"
-        ariaCurrentWhenActive="page"
-        >Credit Card</a
-      >
-    </li>
-    <li>
-      <button (click)="logout()">Log Out</button>
-    </li>
-  </ul>
-</nav>
+<app-navbar></app-navbar>
 <router-outlet></router-outlet>
