--- a/src/app/modals/credit-card/credit-card.component.html
+++ b/src/app/modals/credit-card/credit-card.component.html
@@ -1,4 +1,6 @@
+<button >X</button>
 <form [formGroup]="cardInfoForm" (ngSubmit)="onSubmit()">
+ 
   <label for="cardNumber"
     >Card Number
     <input type="text" formControlName="cardNumber" placeholder="16 Digits"/>
