add some styles

--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -1,13 +1,16 @@
-<div class="login-form">
-  <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-    <label>
-      E-mail
-      <input type="email" formControlName="email" />
-    </label>
-    <label>
-      Password:
-      <input type="password" formControlName="password" />
-    </label>
-    <button type="submit" [disabled]="!loginForm.valid">Login</button>
-  </form>
-</div>
+<body>
+  <div class="login-form">
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+      <i class="fa-solid fa-right-to-bracket"></i>
+      <label>
+        E-mail
+        <input type="email" formControlName="email" />
+      </label>
+      <label>
+        Password:
+        <input type="password" formControlName="password" />
+      </label>
+      <button type="submit" [disabled]="!loginForm.valid">Login</button>
+    </form>
+  </div>
+</body>
