--- a/src/app/features/components/buy-sell/buy-sell.component.html
+++ b/src/app/features/components/buy-sell/buy-sell.component.html
@@ -6,6 +6,7 @@
         <th>Name</th>
         <th>Price (USD)</th>
         <th>Change(24Hr)</th>
+        <th>Action</th>
       </tr>
     </thead>
     <tbody>
