--- a/src/app/features/components/dashboard/dashboard.component.html
+++ b/src/app/features/components/dashboard/dashboard.component.html
@@ -1,5 +1,7 @@
+<body>
+
 <div class="dashboard">
-  <h1>Crypto Dashboard</h1>
+  <h1><i class="fa-brands fa-bitcoin"></i> Crypto Dashboard <i class="fa-brands fa-bitcoin"></i></h1>
   <input type="text" [(ngModel)]="searchText" placeholder="Search Crypto" />
   <table class="crypto-table">
     <thead>
@@ -13,6 +15,7 @@
         <th>Supply</th>
         <th>Volume(24Hr)</th>
         <th>Change(24Hr)</th>
+        <th>Action</th>
       </tr>
     </thead>
     <tbody>
@@ -28,9 +31,10 @@
           <td>$ {{ crypto.vwap24Hr | numberFormat }}</td>
           <td>{{ crypto.supply | numberFormat }}</td>
           <td>$ {{ crypto.volumeUsd24Hr | numberFormat }}</td>
-          <td>{{ crypto.changePercent24Hr | numberFormat }} %</td>
-          <td>
-            <a [routerLink]="['/crypto', crypto.id, 'history']">View History</a>
+          <td [style.color]="crypto.changePercent24Hr >= 0 ? '#078807' : '#900000'">
+            {{ crypto.changePercent24Hr | numberFormat }} %</td>
+          <td>  
+            <a [routerLink]="['/crypto', crypto.id, 'history']"><i class="fa-solid fa-chart-line"></i></a>
           </td>
         </ng-container>
       </tr>
@@ -49,3 +53,4 @@
     </button>
   </div>
 </div>
+</body>
