--- a/src/app/features/components/dashboard/dashboard.component.scss
+++ b/src/app/features/components/dashboard/dashboard.component.scss
@@ -1,29 +1,108 @@
+$background-color: #121212;
+$text-color: #4caf50;
+
+body {
+  background-color: $background-color;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
 .dashboard {
-    text-align: center;
-    margin: 20px;
-    font-family: Arial, sans-serif;
+  background-color: $background-color;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  text-align: center;
+
+}
+
+h1 {
+  color: $text-color;
+  font-size: 35px;
+  font-weight: bolder;
+  i{
+    color: yellow;
   }
-  
-  .crypto-table {
-    width: 100%;
-    border-collapse: collapse;
-    border: 1px solid #ccc;
-  
-    th, td {
-      border: 1px solid #ccc;
-      padding: 8px;
-      text-align: center;
-    }
-  
-    th {
-      background-color: #f2f2f2;
-    }
-  
-    tr:nth-child(even) {
-      background-color: #f2f2f2;
-    }
-  
-    tr:hover {
-      background-color: #ddd;
-    }
+}
+
+input[type="text"] {
+  background-color: $background-color;
+  color: $text-color;
+  border: 1px solid $text-color;
+  padding: 5px;
+  border-radius: 5px;
+  width: 100%;
+  margin-bottom: 20px;
+  height: 35px;
+}
+
+.crypto-table {
+  width: 100%;
+  border-collapse: collapse;
+
+  th, td {
+    padding: 12px;
+    text-align: left;
+    border-bottom: 1px solid $text-color;
   }
+
+  th {
+    background-color: darken($background-color, 10%);
+    color: $text-color;
+    font-size: 15px;
+  }
+
+  td {
+    background-color: $background-color;
+    color: white;
+    font-size: 20px;
+  }
+
+  tr:nth-child(even) {
+    background-color: darken($background-color, 5%);
+  }
+}
+
+.pagination-controls {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 20px;
+
+  button {
+    background-color: $text-color;
+    color: $background-color;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+
+  span {
+    color: $text-color;
+    font-size: 20px;
+    font-weight: bold;
+  }
+
+  button:disabled {
+    background-color: lighten($text-color, 30%);
+    cursor: not-allowed;
+  }
+
+  button:first-child {
+    margin-right: 10px; 
+  }
+}
+
+a {
+  color: $text-color;
+  text-decoration: none;
+
+  i {
+    font-size: 20px;
+  }
+
+  &:hover {
+    color: lighten($text-color, 20%);
+  }
+}
