--- a/src/app/features/components/user-profile/user-profile.component.html
+++ b/src/app/features/components/user-profile/user-profile.component.html
@@ -1,5 +1,6 @@
 <div *ngIf="user">
   <h1>User Profile</h1>
+  <i class="fa-regular fa-user"></i>
   <p>Nickname: {{ user.nickname }}</p>
   <p>Balance: {{ user.balance }} $</p>
   <p>Crypto:</p>
