--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,58 +1,80 @@
 <nav>
-    <ul>
-      <li>
+  <ul>
+    <li>
+      <div class="register">
         <a
           routerLink="/register"
           routerLinkActive="active"
           ariaCurrentWhenActive="page"
-          >Register</a
         >
-      </li>
-      <li>
+          <i class="fa-regular fa-address-card"> Register</i>
+        </a>
+      </div>
+    </li>
+    <li>
+      <div class="login">
         <a
           routerLink="/login"
           routerLinkActive="active"
           ariaCurrentWhenActive="page"
-          >Login</a
         >
-      </li>
-      <li>
+          <i class="fa-solid fa-right-to-bracket">Login</i>
+        </a>
+      </div>
+    </li>
+    <li>
+      <div class="home">
         <a
           routerLink="/home"
           routerLinkActive="active"
           ariaCurrentWhenActive="page"
-          >Home</a
         >
-      </li>
-      <li>
+          <i class="fa-solid fa-house"> Home</i>
+        </a>
+      </div>
+    </li>
+    <li>
+      <div class="dashboard">
         <a
           routerLink="/dashboard"
           routerLinkActive="active"
           ariaCurrentWhenActive="page"
-          >Dashboard</a
+          ><i class="fa-solid fa-chess-board"> Dashboard</i></a
         >
-      </li>
-      <li>
-        <button (click)="openCardModal()">Credit Card</button>
-      </li>
-      <li>
+      </div>
+    </li>
+
+    <li>
+      <div class="profile">
         <a
           routerLink="/userProfile"
           routerLinkActive="active"
           ariaCurrentWhenActive="page"
-          >Profile</a
-        >
-      </li>
-      <li>
+          ><i class="fa-regular fa-user"> Profile</i>
+        </a>
+      </div>
+    </li>
+    <li>
+      <div class="buy">
         <a
           routerLink="/buySell"
           routerLinkActive="active"
           ariaCurrentWhenActive="page"
-          >Buy/ Sell</a
+          ><i class="fa-solid fa-cart-shopping"> Buy</i></a
         >
-      </li>
-      <li>
-        <button (click)="logout()">Log Out</button>
-      </li>
-    </ul>
-  </nav>
+      </div>
+    </li>
+  </ul>
+  <div class="right">
+    <div class="logout">
+      <button (click)="logout()">
+        <i class="fa-solid fa-right-from-bracket"> Log Out</i>
+      </button>
+    </div>
+    <div class="credit-card">
+      <button (click)="openCardModal()">
+        <i class="fa-regular fa-credit-card"> Credit Card</i>
+      </button>
+    </div>
+  </div>
+</nav>
