add sell feature

--- a/src/app/features/components/buy-sell/buy-sell.component.html
+++ b/src/app/features/components/buy-sell/buy-sell.component.html
@@ -1,5 +1,5 @@
 <div class="dashboard">
-  <h1>Crypto Dashboard</h1>
+  <h1>Buy Crypto</h1>
   <table class="crypto-table">
     <thead>
       <tr>
