--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,66 +2,53 @@
   <ul>
     <li>
       <div class="register">
-        <a
-          routerLink="/register"
-          routerLinkActive="active"
-          ariaCurrentWhenActive="page"
-        >
+        <a routerLink="/register" routerLinkActive="active" ariaCurrentWhenActive="page">
           <i class="fa-regular fa-address-card"> Register</i>
         </a>
       </div>
     </li>
     <li>
       <div class="login">
-        <a
-          routerLink="/login"
-          routerLinkActive="active"
-          ariaCurrentWhenActive="page"
-        >
+        <a routerLink="/login" routerLinkActive="active" ariaCurrentWhenActive="page">
           <i class="fa-solid fa-right-to-bracket">Login</i>
         </a>
       </div>
     </li>
     <li>
       <div class="home">
-        <a
-          routerLink="/home"
-          routerLinkActive="active"
-          ariaCurrentWhenActive="page"
-        >
+        <a routerLink="/home" routerLinkActive="active" ariaCurrentWhenActive="page">
           <i class="fa-solid fa-house"> Home</i>
         </a>
       </div>
     </li>
     <li>
       <div class="dashboard">
-        <a
-          routerLink="/dashboard"
-          routerLinkActive="active"
-          ariaCurrentWhenActive="page"
-          ><i class="fa-solid fa-chess-board"> Dashboard</i></a
-        >
+        <a routerLink="/dashboard" routerLinkActive="active" ariaCurrentWhenActive="page"><i
+            class="fa-solid fa-chess-board"> Dashboard</i></a>
       </div>
     </li>
 
     <li>
       <div class="profile">
-        <a
-          routerLink="/userProfile"
-          routerLinkActive="active"
-          ariaCurrentWhenActive="page"
-          ><i class="fa-regular fa-user"> Profile</i>
+        <a routerLink="/userProfile" routerLinkActive="active" ariaCurrentWhenActive="page"><i
+            class="fa-regular fa-user"> Profile</i>
         </a>
       </div>
     </li>
     <li>
       <div class="buy">
-        <a
-          routerLink="/buySell"
-          routerLinkActive="active"
-          ariaCurrentWhenActive="page"
-          ><i class="fa-solid fa-cart-shopping"> Buy</i></a
-        >
+        <a routerLink="/buySell" routerLinkActive="active" ariaCurrentWhenActive="page"><i
+            class="fa-solid fa-cart-shopping"> Buy</i></a>
+      </div>
+    </li>
+    <li>
+      <div class="wallet">
+        <a routerLink="/wallet" routerLinkActive="active" ariaCurrentWhenActive="page"> Wallet</a>
+      </div>
+    </li>
+    <li>
+      <div class="history">
+        <a routerLink="/history" routerLinkActive="active" ariaCurrentWhenActive="page"> History</a>
       </div>
     </li>
   </ul>
