add conditional rendering

--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -1,7 +1,10 @@
 <body>
   <div class="login-form">
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-      <i class="fa-solid fa-right-to-bracket"></i>
+      <div>
+        <h2>Login</h2>
+        <i class="fa-solid fa-right-to-bracket"></i>
+      </div>
       <label>
         E-mail
         <input type="email" formControlName="email" />
