--- a/src/app/auth/components/register-form/register-form.component.html
+++ b/src/app/auth/components/register-form/register-form.component.html
@@ -1,6 +1,7 @@
 <body>
   <form class="register" [formGroup]="signUpForm">
     <i class="fa-solid fa-address-card"></i>
+    <h1>Registration</h1>
     <label>
       E-mail
       <input type="email" formControlName="email" />
