--- a/src/app/features/components/user-profile/user-profile.component.html
+++ b/src/app/features/components/user-profile/user-profile.component.html
@@ -1,3 +1,5 @@
+<body>
+
 <div *ngIf="user">
   <h1>User Profile</h1>
   <i class="fa-regular fa-user"></i>
@@ -6,7 +8,8 @@
   <p>Crypto:</p>
   <ul>
     <li *ngFor="let crypto of user.crypto">
-      {{ crypto.id }}: {{ crypto.cryptoAmount | numberFormat }}
+     <span class="crypto-key">{{ crypto.id }}:</span> <span class="crypto-value"> {{ crypto.cryptoAmount | numberFormat }}</span>
     </li>
   </ul>
 </div>
+</body>
